--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@ body {
 
 @font-face {
     font-family: Alina2;
-    src: url(Alina\ W00\ regular.ttf);
+    src: url(../FONT/Alina\ W00\ regular.ttf);
 }
 
 .box{
