--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #232324;
-    background: linear-gradient(transparent,#dac9eb);
+    background: linear-gradient(transparent,#aac8eb);
 }
 
 @font-face {
