--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -136,7 +136,7 @@ body {
     object-fit: cover;
     border-radius: 10px;
     display: block;
-    box-shadow: 0 0 10px #254483;
+    box-shadow: 0 0 10px #864c8b;
 }
 
 /* caption debajo de la imagen */
