--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -328,6 +328,7 @@ body {
     font-size: 60px;
     font-weight: bold;
     width: 100%;
+    height: 70px;
     font-family: Alina2;
     color: #4970BF;
 }
